# tftest-examples

./: .gitignore  README.md  ci.yaml  pyproject.toml
.github/templates/: static-analysis.yaml
.github/workflows/: ci.yaml  resource-group-pipeline.yaml  static-analysis.yaml  storage-account-pipeline.yaml
resource-group/: main.tf  outputs.tf  variables.tf
resource-group/test/: test_resource_group.py
resource-group/test/fixture/: main.tf  outputs.tf  terraform.tfvars  variables.tf
storage-account/: locals.tf  main.tf  outputs.tf  variables.tf
storage-account/test/: test_storage_account.py
storage-account/test/fixture/: main.tf  outputs.tf  provider.tf
