[tool.poetry]
name = "tftest-example"
version = "0.0.1"
description = "Example of using tftest."
license = "MIT"
readme = "README.md"
repository = "https://github.com/robinfrankhuizen/tftest-examples"
authors = ["Robin Frankhuizen"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
tftest = "^1.8.4"
pytest = "^7.4.0"
